--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Saira Condensed', sans-serif;
+    overflow-x: hidden;
    
 }
 .encabezado{
@@ -40,18 +41,143 @@
     border-bottom: 30px solid transparent; 
     position: absolute;
     left: 1166px;
-    top: 0;
-    
-    
+    top: 0; 
 }
-.triangulo img{
-    width: 100px;
-    position: absolute;
-    top:-75px;
-    left: 90px;
-    transition: 0.5s;
 
-}
 hr{
     background: rgb(38, 5, 112);
+}
+.titulo_bienvenida{
+    margin-top: 30px;
+    margin-left: 100px;
+}
+.logo{
+    position: absolute;
+    width: 35px;
+    top:165px;
+    left: 60px;
+}
+
+.facebook{
+    width: 400px;
+    height: 50px;
+    background: rgb(38, 5, 112);
+    margin-top: 5px ;
+    margin-left: 5px;
+    border-radius: 5px;
+    margin-left: 1285px;
+    transition: 0.5s;
+    display: flex;
+    padding: 10px;
+}
+.facebook p{
+    margin-left: 25px;
+    font-size: 25px;
+    color: white;
+}
+.instagram{
+    width: 400px;
+    height: 50px;
+    background: rgb(38, 5, 112);
+    margin-top: 5px ;
+    margin-left: 5px;
+    border-radius: 5px;
+    margin-left: 1285px;
+    display: flex;
+    padding: 10px;
+    transition: 0.5s;
+    
+}
+.instagram p{
+    margin-left: 30px;
+    font-size: 25px;
+    color: white;
+}
+.twitter{
+    width: 400px;
+    height: 50px;
+    background: rgb(38, 5, 112);
+    margin-top: 5px ;
+    margin-left: 5px;
+    border-radius: 5px;
+    margin-left: 1285px;
+    display: flex;
+    padding: 10px;
+    transition: 0.5s;
+    
+}
+.twitter p{
+    margin-left: 25px;
+    font-size: 25px;
+    color: white;
+}
+.youtube{
+    width: 400px;
+    height: 50px;
+    background: rgb(38, 5, 112);
+    margin-top: 5px ;
+    margin-left: 5px;
+    border-radius: 5px;
+    margin-left: 1285px;
+    display: flex;
+    padding: 10px;
+    transition: 0.5s;
+}
+.youtube p{
+    margin-left: 25px;
+    font-size: 25px;
+    color: white;
+}
+.facebook:hover{
+    margin-left: 1200px;
+
+}
+.instagram:hover{
+    margin-left: 1200px;
+
+}
+.twitter:hover{
+    margin-left: 1200px;
+
+}
+.youtube:hover{
+    margin-left: 1200px;
+
+}
+.facebooki{
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: rgb(250, 80, 63);;
+}
+.instagrami{
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: rgb(250, 80, 63);;
+}
+.twitteri{
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: rgb(250, 80, 63);;
+}
+.youtubei{
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: rgb(250, 80, 63);;
+}
+footer{
+    background: rgb(38, 5, 112);
+    width: 100%;
+    margin-top: 40px;
+}
+footer img{
+    width: 100px;
+}
+footer p{
+    color: white;
+    margin-left: 10px;
+
 }
