slider del index

--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -197,3 +197,42 @@ footer p{
     visibility: hidden;
     transition: .4s;
 }
+.slider{
+    width: 95%;
+    margin: auto;
+    
+    
+}
+.slider ul{
+    padding: 0;
+    display: flex;
+    width: 400%;
+    animation: cambio 20s infinite alternate;
+    
+    
+}
+.slider li{
+    list-style: none;
+    width: 100%;
+    
+}
+.slider img{
+    width: 100%;
+    height: 400px;
+
+}
+@keyframes cambio {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+
+    75% {margin-left: -300%;}
+    100% {margin-left: -300%;}
+
+
+}
