--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -161,19 +161,19 @@ hr{
     font-size: 30px;
     margin-top: 10px;
     margin-left: 10px;
-    color: rgb(250, 80, 63);;
+    color: rgb(250, 80, 63);
 }
 .twitteri{
     font-size: 30px;
     margin-top: 10px;
     margin-left: 10px;
-    color: rgb(250, 80, 63);;
+    color: rgb(250, 80, 63);
 }
 .youtubei{
     font-size: 30px;
     margin-top: 10px;
     margin-left: 10px;
-    color: rgb(250, 80, 63);;
+    color: rgb(250, 80, 63);
 }
 footer{
     background: rgb(38, 5, 112);
@@ -237,8 +237,51 @@ footer p{
 }
 .contenedor_todo_actividades{
     display: flex;
-    background: green;
     width: 1250px;
     margin-top: 10px;
     margin-left: 50px;
 }
+.actividades{
+    width: 200px;
+    height: 400px;
+    background: rgb(38, 5, 112);
+    margin: 25px;
+    border-radius: 10px;
+}
+.actividades img{
+    width: 100%;
+    height: 180px;
+    padding: 0;
+}
+.actividades h4{
+    color: white;
+    margin-top: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+}
+.actividades p{
+    margin-left: 4px;
+}
+.precio_actividad{
+    background: rgb(250, 80, 63);
+    width: 90px;
+    height: 50px;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 50px;
+    border: white solid;
+    
+}
+.precio_actividad h5{
+    font-size: 22px;
+    text-align: center;
+    margin-top: 5px;
+   
+    
+}
+.actividades:hover{
+-webkit-box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
+-moz-box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
+box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
+}
+
