--- a/css/estilosreg.css
+++ b/css/estilosreg.css
@@ -1,29 +1,58 @@
 /*_______________estilo formulario inicio de sesion____________*/
-
+body{
+    background-image: url(../imagenes/fondoregi.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.container{
+    width: 50%;
+}
 .formu{
     margin: auto;
-    width: 300px;
-    height: 580px;
-    border: 4px solid blueviolet;
+    width: 100%;
+    height: auto;
+    border: 1px solid black;
     border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
 }
-
+h1{
+    margin-top: 7%;
+}
 .formu{
-    margin-top: 10px;
-    padding: 10px;
+    margin-top: -10%;
+    margin-left: 5%;
+    padding: 2%;
 }
-
+.container img{
+    width: 30%;
+    height: 30%;
+    z-index: 11;
+    margin-left: 43%;
+}
+.conten
+{
+    display: flex;
+    margin-right: 4%;
+}
 form{
-    margin-top: 20px;
+    border: 2px solid white;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
+    text-align: center;
+    padding: 1%;
+    color: white; 
+    font-family: 'Saira Condensed', sans-serif;
 }
 
 input{
-    margin: 15px 19px;
+    margin: 15px 15px;
     width: 250px;
     padding: 5px;
     border-radius: 10px;
     border: none;
     border: 1px solid gray;
+    text-align: center;
+    border: 2px solid rgba(122, 4, 231, 1);
 }
 
 input:hover{
@@ -39,22 +68,29 @@ label{
 #env{
     margin-top: 8px;
     width: 100px;
-    margin: 10px 100px;
-    background-color: cadetblue;
+    background-color: rgb(38, 5, 112);
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     color: white;
     padding: 5px 5px;
     border: none;
+    cursor: pointer;
+    margin-left: 2%;
 }
 
 #env:hover{
-    color: black;
-    background-color: goldenrod;
+    color: white;
+    background-color: rgba(122, 4, 231, 1);
     box-shadow: 0 4px 16px rgba(122, 4, 231, 1);
     transition: all 0.2s ease;
 }
 
-
+a{
+    color: white;
+    margin-right: 55%;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 1%;
+    border-radius: 15px;
+}
 /*_______________________________________*/
