--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -292,3 +292,30 @@ box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
 }
 
 /* tabla de vuelos */
+.tabla_vuelos_administrador{
+    width: 90%;
+    background:   rgb(38, 5, 112);
+    margin: 10px auto;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    grid-auto-rows: 60px;
+}
+.titulo{
+    grid-column-start:1 ;
+    grid-column-end: 8;
+    text-align: center;
+    background: rgb(250, 80, 63);
+    color: white;
+    font-size: 38px;
+}
+.elem_TI{
+    text-align: center;
+    color: rgb(250, 80, 63);
+    padding: 15px;
+}
+.elem{
+    text-align: center;
+    color: white;
+    padding: 15px;
+    z-index: 100;
+}
