--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -299,6 +299,9 @@ box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
     display: grid;
     grid-template-columns: repeat(7,1fr);
     grid-auto-rows: 60px;
+    -webkit-box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
+box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
 }
 .titulo{
     grid-column-start:1 ;
@@ -306,12 +309,13 @@ box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
     text-align: center;
     background: rgb(250, 80, 63);
     color: white;
-    font-size: 38px;
+    font-size: 35px;
 }
 .elem_TI{
     text-align: center;
     color: rgb(250, 80, 63);
-    padding: 15px;
+    padding: 10px;
+    font-size: 16px;
 }
 .elem{
     text-align: center;
