--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -20,6 +20,7 @@
     margin-top: 22px;
     color: white;
 }
+
 .encabezado a{
     text-decoration: none;
 }
@@ -32,6 +33,9 @@
 } 
 .encabezado2 nav ul li a{
     text-decoration: none;
+}
+.encabezado2 nav ul li a:hover{
+    color: rgb(250, 80, 63);
 }
 .triangulo{
     width: 0; 
@@ -322,4 +326,35 @@ box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
     color: white;
     padding: 15px;
     z-index: 100;
+}
+
+/* servicios */
+.servicios{
+   
+    display: flex;
+}
+.servicios img{
+    width: 250px;
+    height: 250px;
+    margin-left: 10px;
+}
+.servicios div{
+    border: solid rgb(38, 5, 112);
+    margin: 10px auto;
+    transition: 0.5s;
+}
+
+.servicios div:hover{
+    transform: translateY(-10px);
+    -webkit-box-shadow: 0px 25px 5px -12px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 25px 5px -12px rgba(0,0,0,0.75);
+box-shadow: 0px 25px 5px -12px rgba(0,0,0,0.75);
+}
+.p-servicios{
+    text-align: center;
+    font-size: 18px;
+}
+.servicios h4{
+ text-align: center;
+ 
 }
