--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -5,59 +5,66 @@
     overflow-x: hidden;
    
 }
+/*--------------------------------- encabezado---------------------------- */
 .encabezado{
     display: flex;
     background: rgb(38, 5, 112);
-    
+    width: 102%;
+    height: 83px;
 
 }
 .encabezado img{
-    width: 180px;
-    height: 100px;
+    width: 10%;
+    height: 95%;
 }
 .encabezado h2{
     margin-left: 200px;
     margin-top: 22px;
     color: white;
 }
-
 .encabezado a{
     text-decoration: none;
 }
-.encabezado2 nav ul{
-    display: flex;
-} 
-.encabezado2 nav ul li{
-    padding: 3px 30px;
-    list-style: none;
-} 
-.encabezado2 nav ul li a{
-    text-decoration: none;
-}
-.encabezado2 nav ul li a:hover{
-    color: rgb(250, 80, 63);
-}
+
 .triangulo{
     width: 0; 
     height: 0; 
-    border-right: 200px solid rgb(250, 80, 63);
-    border-top: 100px solid transparent;
-    border-bottom: 30px solid transparent; 
+    border-right: 190px solid rgb(160, 160, 160);
+    border-top: 90px solid transparent;
+    border-bottom: 90px solid transparent; 
     position: absolute;
-    left: 1166px;
-    top: 0; 
+    left: 87%;
+    top: -1%; 
+}
+/*--------------------------------- navegacion---------------------------- */
+.encabezado2{
+    border:2px solid black;
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+}
+.encabezado2 nav ul{
+    display: flex;
+    text-align: center;
+    padding:10px 30px;
+} 
+.encabezado2 nav ul li{
+    list-style: none;
+    cursor: pointer;
+    margin-left: 4%;
+} 
+.encabezado2 nav ul li:hover{
+
+    background-color: blue;
 }
 .logo_dos{
     position: absolute;
     width: 100px;
-    left: 1250px;
+    left: 92%;
     top: 30px;
     transition: 0.1s;
 }
 
-hr{
-    background: rgb(38, 5, 112);
-}
 .titulo_bienvenida{
     margin-top: 30px;
     margin-left: 100px;
@@ -69,116 +76,17 @@ hr{
     left: 60px;
 }
 
-.facebook{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    transition: 0.5s;
-    display: flex;
-    padding: 10px;
-}
-.facebook p{
-    margin-left: 25px;
-    font-size: 25px;
+.linea_iniciar{
+    width: 122px;
+    margin-left: 200px;
+    transition: .1s;
     color: white;
+    opacity: 0;
+    visibility: hidden;
+    transition: .4s;
 }
-.instagram{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    display: flex;
-    padding: 10px;
-    transition: 0.5s;
-    
-}
-.instagram p{
-    margin-left: 30px;
-    font-size: 25px;
-    color: white;
-}
-.twitter{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    display: flex;
-    padding: 10px;
-    transition: 0.5s;
-    
-}
-.twitter p{
-    margin-left: 25px;
-    font-size: 25px;
-    color: white;
-}
-.youtube{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    display: flex;
-    padding: 10px;
-    transition: 0.5s;
-}
-.youtube p{
-    margin-left: 25px;
-    font-size: 25px;
-    color: white;
-}
-.facebook:hover{
-    margin-left: 1200px;
+/*______________________________ pie de pagina________________________________________ */
 
-}
-.instagram:hover{
-    margin-left: 1200px;
-
-}
-.twitter:hover{
-    margin-left: 1200px;
-
-}
-.youtube:hover{
-    margin-left: 1200px;
-
-}
-.facebooki{
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(250, 80, 63);;
-}
-.instagrami{
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(250, 80, 63);
-}
-.twitteri{
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(250, 80, 63);
-}
-.youtubei{
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(250, 80, 63);
-}
 footer{
     background: rgb(38, 5, 112);
     width: 100%;
@@ -192,18 +100,13 @@ footer p{
     margin-left: 10px;
 
 }
-.linea_iniciar{
-    width: 122px;
-    margin-left: 200px;
-    transition: .1s;
-    color: white;
-    opacity: 0;
-    visibility: hidden;
-    transition: .4s;
-}
+
+
+/*--------------------------------- slider----------------------------------------- */
+
 .slider{
-    width: 95%;
-    margin: auto;
+    width: 85%;
+    margin-left: 4%;
     
     
 }
@@ -237,7 +140,50 @@ footer p{
 
     75% {margin-left: -300%;}
     100% {margin-left: -300%;}
+}
+/*--------------------------------- redes sociales----------------------------------------- */
 
+.redes{
+    margin-top: -27%;
+    position: fixed;
+}
+.facebook, .twitter, .youtube, .instagram{
+    width: 400px;
+    height: 50px;
+    background: rgb(38, 5, 112);
+    margin-top: 5px ;
+    margin-left: 5px;
+    border-radius: 5px;
+    margin-left: 1285px;
+    transition: 0.5s;
+    display: flex;
+    padding: 10px;
+}
+.facebook p, .twitter p, .youtube p, .instagram p{
+    margin-left: 25px;
+    font-size: 25px;
+    color: white;
+}
+
+.facebook:hover, .instagram:hover, .twitter:hover, .youtube:hover{
+    margin-left: 1200px;
+}
+
+.facebooki, .instagrami, .twitteri, .youtubei{
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: rgb(160, 160, 160);
+}
+
+/*--------------------------------- redes sociales----------------------------------------- */
+
+
+/*-------------------------------------- actividades---------------------------- */
+.activi{
+    visibility: hidden;
+    margin-top: -110%;
+    background-color:blue;
 }
 .contenedor_todo_actividades{
     display: flex;
@@ -286,16 +232,10 @@ footer p{
 -moz-box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
 box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
 }
-.iniciar:hover{
-    color: rgb(250, 80, 63);
-    border-bottom: solid rgb(250, 80, 63);
-}
-.registrarse:hover{
-    color: rgb(250, 80, 63);
-    border-bottom: solid rgb(250, 80, 63);
-}
+/*-------------------------------------- actividades---------------------------- */
 
-/* tabla de vuelos */
+
+/* _________________________________tabla de vuelos__________________________ */
 .tabla_vuelos_administrador{
     width: 90%;
     background:   rgb(38, 5, 112);
@@ -328,7 +268,7 @@ box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
     z-index: 100;
 }
 
-/* servicios */
+/*_______________________________ servicios________________________________- */
 .servicios{
    
     display: flex;
