--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -1,193 +1,108 @@
 *{
+    overflow-x: hidden;
+}
+body{
     padding: 0;
     margin: 0;
     font-family: 'Saira Condensed', sans-serif;
-    overflow-x: hidden;
-   
 }
+ 
+/*--------------------------------- encabezado---------------------------- */
 .encabezado{
     display: flex;
     background: rgb(38, 5, 112);
-    
+    width: 102%;
+    height: 83px;
 
 }
 .encabezado img{
-    width: 180px;
-    height: 100px;
+    width: 10%;
+    height: 90%;
 }
 .encabezado h2{
-    margin-left: 200px;
+    margin-left: 0px;
     margin-top: 22px;
     color: white;
+    font-size: 25px;
+    width: 80%;
 }
-.encabezado a{
-    text-decoration: none;
-}
-.encabezado2 nav ul{
+
+.funci{
+    margin-left: 3%;
     display: flex;
-} 
-.encabezado2 nav ul li{
-    padding: 3px 30px;
-    list-style: none;
-} 
-.encabezado2 nav ul li a{
-    text-decoration: none;
+    margin-top: 1.2%;
+    width: 35%;
 }
+
+.iniciar{
+    color: white;
+    font-size: 25px;
+    text-decoration-color: black;
+    width:40%;
+}
+
+
+.registrarse{
+    color: white;
+    font-size: 25px;
+    text-decoration-color: black;
+    margin-right: 10px;
+}
+.infor{
+    display: flex;
+    width: 40%;
+    margin-left: 20%;
+}
+
+.infor img{
+    width: 15%;
+}
+
 .triangulo{
     width: 0; 
     height: 0; 
-    border-right: 200px solid rgb(250, 80, 63);
-    border-top: 100px solid transparent;
-    border-bottom: 30px solid transparent; 
+    border-right: 190px solid rgb(160, 160, 160);
+    border-top: 90px solid transparent;
+    border-bottom: 90px solid transparent; 
     position: absolute;
-    left: 1166px;
-    top: 0; 
+    left: 87%;
+    top: -1%; 
+}
+/*--------------------------------- navegacion---------------------------- */
+.encabezado2{
+    border:2px solid black;
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+}
+
+.encabezado2 nav ul{
+    margin-top: 3px;
+    display: flex;
+    text-align: center;
+    margin-right: 120px;
+    padding: 0px 1px;
+} 
+.encabezado2 nav ul li{
+    list-style: none;
+    cursor: pointer;
+    margin-left: 4%;
+    padding: 5px;
+    border-radius: 10px;
+} 
+.encabezado2 nav ul li:hover{
+    color: white;
+    background-color:rgb(38, 5, 112);
 }
 .logo_dos{
     position: absolute;
     width: 100px;
-    left: 1250px;
+    left: 92%;
     top: 30px;
     transition: 0.1s;
 }
 
-hr{
-    background: rgb(38, 5, 112);
-}
-.titulo_bienvenida{
-    margin-top: 30px;
-    margin-left: 100px;
-}
-.logo{
-    position: absolute;
-    width: 35px;
-    top:165px;
-    left: 60px;
-}
 
-.facebook{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    transition: 0.5s;
-    display: flex;
-    padding: 10px;
-}
-.facebook p{
-    margin-left: 25px;
-    font-size: 25px;
-    color: white;
-}
-.instagram{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    display: flex;
-    padding: 10px;
-    transition: 0.5s;
-    
-}
-.instagram p{
-    margin-left: 30px;
-    font-size: 25px;
-    color: white;
-}
-.twitter{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    display: flex;
-    padding: 10px;
-    transition: 0.5s;
-    
-}
-.twitter p{
-    margin-left: 25px;
-    font-size: 25px;
-    color: white;
-}
-.youtube{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    display: flex;
-    padding: 10px;
-    transition: 0.5s;
-}
-.youtube p{
-    margin-left: 25px;
-    font-size: 25px;
-    color: white;
-}
-.facebook:hover{
-    margin-left: 1200px;
-
-}
-.instagram:hover{
-    margin-left: 1200px;
-
-}
-.twitter:hover{
-    margin-left: 1200px;
-
-}
-.youtube:hover{
-    margin-left: 1200px;
-
-}
-.facebooki{
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(250, 80, 63);;
-}
-.instagrami{
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(250, 80, 63);;
-}
-.twitteri{
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(250, 80, 63);;
-}
-.youtubei{
-    font-size: 30px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(250, 80, 63);;
-}
-footer{
-    background: rgb(38, 5, 112);
-    width: 100%;
-    margin-top: 40px;
-}
-footer img{
-    width: 100px;
-}
-footer p{
-    color: white;
-    margin-left: 10px;
-
-}
 .linea_iniciar{
     width: 122px;
     margin-left: 200px;
@@ -197,9 +112,21 @@ footer p{
     visibility: hidden;
     transition: .4s;
 }
+/*______________________________ pie de pagina________________________________________ */
+
+footer{
+    background: rgb(38, 5, 112);
+    width: 100%;
+    margin-top: 10%;
+    height: 100px;
+}
+
+
+/*--------------------------------- slider----------------------------------------- */
+
 .slider{
-    width: 95%;
-    margin: auto;
+    width: 85%;
+    margin-left: 4%;
     
     
 }
@@ -233,6 +160,209 @@ footer p{
 
     75% {margin-left: -300%;}
     100% {margin-left: -300%;}
-
-
 }
+/*--------------------------------- redes sociales----------------------------------------- */
+
+.redes{
+    margin-top: -27%;
+}
+.facebook, .twitter, .youtube, .instagram{
+    width: 400px;
+    height: 50px;
+    background: rgb(38, 5, 112);
+    margin-top: 5px ;
+    margin-left: 5px;
+    border-radius: 5px;
+    margin-left: 1285px;
+    transition: 0.5s;
+    display: flex;
+    padding: 10px;
+}
+.facebook p, .twitter p, .youtube p, .instagram p{
+    margin-left: 25px;
+    font-size: 25px;
+    color: white;
+}
+
+.facebook:hover, .instagram:hover, .twitter:hover, .youtube:hover{
+    margin-left: 1200px;
+}
+
+.facebooki, .instagrami, .twitteri, .youtubei{
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: rgb(160, 160, 160);
+}
+
+/*--------------------------------- redes sociales----------------------------------------- */
+
+
+/*-------------------------------------- actividades---------------------------- */
+.activi{
+    display: none;
+    margin-top: 5%;
+}
+.contenedor_todo_actividades{
+    display: flex;
+    width: 1250px;
+    margin-top: 10px;
+    margin-left: 50px;
+}
+.actividades{
+    width: 200px;
+    height: 400px;
+    background: rgb(38, 5, 112);
+    margin: 25px;
+    border-radius: 10px;
+}
+.actividades img{
+    width: 100%;
+    height: 180px;
+    padding: 0;
+}
+.actividades h4{
+    color: white;
+    margin-top: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+}
+.actividades p{
+    margin-left: 4px;
+    color:rgb(250, 80, 63);
+}
+.precio_actividad{
+    background: rgb(250, 80, 63);
+    width: 90px;
+    height: 50px;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 50px;
+    border: white solid;  
+}
+.precio_actividad h5{
+    font-size: 22px;
+    text-align: center;
+    margin-top: 5px; 
+}
+.actividades:hover{
+-webkit-box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
+-moz-box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
+box-shadow: 0px 2px 14px 8px rgba(66,56,66,0.72);
+}
+/*-------------------------------------- actividades---------------------------- */
+
+
+/* _________________________________tabla de vuelos__________________________ */
+.vuelosindex{
+    display: none;
+    margin-top: 5%;
+}
+.tabla_vuelos_administrador{
+    width: 90%;
+    background:   rgb(38, 5, 112);
+    margin: 10px auto;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    grid-auto-rows: 60px;
+    -webkit-box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
+box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
+}
+.titulo{
+    grid-column-start:1 ;
+    grid-column-end: 8;
+    text-align: center;
+    background: rgb(250, 80, 63);
+    color: white;
+    font-size: 35px;
+}
+.elem_TI{
+    text-align: center;
+    color: rgb(250, 80, 63);
+    padding: 10px;
+    font-size: 16px;
+}
+.elem{
+    text-align: center;
+    color: white;
+    padding: 15px;
+    z-index: 100;
+}
+/* _________________________________tabla de vuelos__________________________ */
+
+
+/*_______________________________ servicios________________________________- */
+.servicioo{
+    display: none;
+    margin-top: 5%;
+}
+.servicios{
+   
+    display: flex;
+}
+.servicios img{
+    width: 250px;
+    height: 250px;
+    margin-left: 10px;
+}
+.servicios div{
+    border: solid rgb(38, 5, 112);
+    margin: 10px auto;
+    transition: 0.5s;
+}
+
+.servicios div:hover{
+    transform: translateY(-10px);
+    -webkit-box-shadow: 0px 25px 5px -12px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 25px 5px -12px rgba(0,0,0,0.75);
+box-shadow: 0px 25px 5px -12px rgba(0,0,0,0.75);
+}
+.p-servicios{
+    text-align: center;
+    font-size: 18px;
+}
+.servicios h4{
+ text-align: center;
+ 
+}
+/*_______________________________ servicios________________________________- */
+
+
+/* --------------------------------- quienes somos --------------------------- */
+.somoos{
+    display: none;
+    margin-top: 5%;
+}
+/* --------------------------------- quienes somos --------------------------- */
+
+
+/* --------------------------------- tiquetes--------------------------- */
+.tiquee{
+    display: none;
+    margin-top: 5%;
+}
+/* --------------------------------- tiquetes--------------------------- */
+
+
+/* --------------------------------- viajes --------------------------- */
+.viajee{
+    display: none;
+    margin-top: 5%;
+}
+/* --------------------------------- viajes --------------------------- */
+
+
+/* --------------------------------- precios --------------------------- */
+.precioo{
+    display: none;
+    margin-top: 5%;
+}
+/* --------------------------------- precios --------------------------- */
+
+/* --------------------------------- alojamiento --------------------------- */
+.aloja{
+    display: none;
+    margin-top: 5%;
+}
+/* --------------------------------- alojamiento --------------------------- */
