--- a/css/estilos_index.css
+++ b/css/estilos_index.css
@@ -117,11 +117,33 @@ body{
 footer{
     background: rgb(38, 5, 112);
     width: 100%;
-    margin-top: 10%;
-    height: 100px;
+    margin-top: 60.5px;
+    height: 90.22px;
+    display: flex;
+}
+.logoos{
+    width: 20%;
+    height: 90px;
+    margin-right: 20%;
 }
 
+.logooo{
+    width: 12%;
+    height: 90px;
+    margin-left: 20%;
+}
 
+.text
+{
+    text-align: center;
+    margin-right:10% ;
+    color: white;
+    font-size: 20px;
+    width: 60%;
+}
+.text p{
+    margin: 0px;
+}
 /*--------------------------------- slider----------------------------------------- */
 
 .slider{
@@ -135,8 +157,6 @@ footer{
     display: flex;
     width: 400%;
     animation: cambio 20s infinite alternate;
-    
-    
 }
 .slider li{
     list-style: none;
@@ -145,7 +165,7 @@ footer{
 }
 .slider img{
     width: 100%;
-    height: 400px;
+    height: 395px;
 
 }
 @keyframes cambio {
@@ -166,6 +186,7 @@ footer{
 .redes{
     margin-top: -27%;
 }
+
 .facebook, .twitter, .youtube, .instagram{
     width: 400px;
     height: 50px;
@@ -179,9 +200,11 @@ footer{
     padding: 10px;
 }
 .facebook p, .twitter p, .youtube p, .instagram p{
-    margin-left: 25px;
+    margin-left:23px;
     font-size: 25px;
     color: white;
+    height: 40px;
+    margin-top:-1% ;
 }
 
 .facebook:hover, .instagram:hover, .twitter:hover, .youtube:hover{
@@ -205,13 +228,12 @@ footer{
 }
 .contenedor_todo_actividades{
     display: flex;
-    width: 1250px;
-    margin-top: 10px;
-    margin-left: 50px;
+    width: 100%px;
+    margin-top: 5%;
 }
 .actividades{
-    width: 200px;
-    height: 400px;
+    width: 300px;
+    height: 450px;
     background: rgb(38, 5, 112);
     margin: 25px;
     border-radius: 10px;
@@ -233,16 +255,20 @@ footer{
 }
 .precio_actividad{
     background: rgb(250, 80, 63);
-    width: 90px;
-    height: 50px;
+    width: 130px;
+    height: 65px;
     border-radius: 5px;
     margin-top: 20px;
-    margin-left: 50px;
-    border: white solid;  
+    margin-left:30px;
+    border: white solid;
+    text-align: center; 
+    cursor: pointer; 
+}
+.precio_actividad:hover{
+    background-color: rgb(197, 197, 197);
 }
 .precio_actividad h5{
-    font-size: 22px;
-    text-align: center;
+    font-size: 18px;
     margin-top: 5px; 
 }
 .actividades:hover{
@@ -273,7 +299,7 @@ box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
     grid-column-start:1 ;
     grid-column-end: 8;
     text-align: center;
-    background: rgb(250, 80, 63);
+    background: rgb(160, 160, 160);
     color: white;
     font-size: 35px;
 }
