--- a/css/vuelos_admi.css
+++ b/css/vuelos_admi.css
@@ -31,7 +31,7 @@ box-shadow: -1px 0px 16px 2px rgba(0,0,0,0.75);
 }
 .elem{
     text-align: center;
-    color: white;
+    color: red;
     padding: 15px;
     z-index: 100;
 }
