--- a/admi/crear_vuelos.css
+++ b/admi/crear_vuelos.css
@@ -16,19 +16,19 @@ body{
 }
 .formu img{
     width: 60%;
-    margin-left: 22%;
+    margin-left: 25%;
     margin-top: 7%;
 }
 h2{
     font-size: 35px;
-    margin-top: 16%;
+    margin-top: 18%;
     color:  rgb(38, 5, 112);
     text-shadow: 2px  1px 1px white;
 }
 form{
     background-color: rgba(0, 0, 0, 0.4);
-    width:350px;
-    height: 460px;
+    width:430px;
+    height: 450px;
     border:1px solid rgb(38, 5, 112);
     border-radius: 10px;
     margin-top: -21%;
@@ -44,16 +44,44 @@ h1{
     color: rgb(38, 5, 112);
     text-shadow: 4px 3px 3px black;
 }
-form input{
+.vuelos{
     margin-top: 10px ;
     width: 250px;
     height: 30px;
     border-radius: 10px;
     border:2px solid rgb(38, 5, 112);
     text-align: center;
+    margin-left: 17%;
+}
+.hora{
+    margin-top: 10px ;
+    width: 250px;
+    height: 30px;
+    border-radius: 10px;
+    border:2px solid rgb(38, 5, 112);
+    text-align: center;
+    margin-left: 5%;
+}
+.horat{
+    margin-top: 10px ;
+    width: 250px;
+    height: 30px;
+    border-radius: 10px;
+    border:2px solid rgb(38, 5, 112);
+    text-align: center;
+    margin-left: 2%;
+}
+.estado{
+    margin-top: 10px ;
+    width: 250px;
+    height: 30px;
+    border-radius: 10px;
+    border:2px solid rgb(38, 5, 112);
+    text-align: center;
+    margin-left: 20%;
 }
 .enviar{
-    margin: 10px 50px;
+   margin-top: 5%;
     width: 100px;
     height: 30px;
     border-radius: 10px;
@@ -61,4 +89,26 @@ form input{
 }
 form input:hover{
     border:2px solid green;
+}
+label{
+    color: black;
+    text-shadow: 2px  1px 1px white;
+}
+.inputR{
+    margin-top: 10px ;
+    width: 250px;
+    height: 35px;
+    border-radius: 10px;
+    border:2px solid rgb(38, 5, 112);
+    text-align: center;
+    margin-left: 21%;
+}
+.inputRR{
+    margin-top: 10px ;
+    width: 250px;
+    height: 35px;
+    border-radius: 10px;
+    border:2px solid rgb(38, 5, 112);
+    text-align: center;
+    margin-left: 20%;
 }
