--- a/info/estilos.css
+++ b/info/estilos.css
@@ -1,8 +1,11 @@
+body{
+    font-family: 'Saira Condensed', sans-serif;
+}
 .certificado{
     margin: auto;
     width: 400px;
     height: 400px;
-    border: 2px solid black;
+    border: 2px solid rgb(38, 5, 112);
 }
 
 p{
@@ -21,9 +24,28 @@ h2{
     padding: 8px;
     border-radius: 8px;
     background: orangered;
+    cursor: pointer;
+    color: white;
+    border: none;
+}
+#pdf:hover{
+    background: rgb(38, 5, 112);
 }
 
 .title{
     width: 150px;
     margin: 0px 125px;
+}
+.logos{
+    position: absolute;
+    top: 10px;
+    left: 480px;
+    width: 75px;
+}
+
+.logo{
+    position: absolute;
+    top: 295px;
+    left: 773px;
+    width: 110px;
 }
