--- a/cliente/cliente.css
+++ b/cliente/cliente.css
@@ -1,8 +1,8 @@
-*{
-    font-family: 'Saira Condensed', sans-serif;
-}
+
 body{
     overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }
 
 .header{
@@ -11,8 +11,6 @@ body{
 }
 
 .slider{
-    width: 95%;
-    margin: auto;
     overflow: hidden;
 }
 
@@ -27,7 +25,7 @@ body{
     font-size: 14px;
     display: flex;
     align-items: center;
-    background-color: #EEE;
+    background-color: rgb(138, 118, 182) ;
     border-bottom-left-radius: 24px;
     padding: 0px 24px;
     box-sizing: border-box;
@@ -43,10 +41,12 @@ h3{
 .btn_header{
     border: none;
     margin: 10px;
+    background-color: rgb(138, 118, 182);
 }
 
 .btn_header:hover{
     cursor: pointer;
+    color: white;
 }
 
 .btn_menu{
@@ -72,31 +72,31 @@ h3{
     margin: 56px 535px;
 }
 
-.imagen-slider{
-    margin: 6px 14px;
-    width: 1320px;
-    height: 380px;
-}
+/*--------------------------------- slider----------------------------------------- */
 
+.slider{
+    width: 85%;
+    margin-left: 4%;
+    
+    
+}
 .slider ul{
     padding: 0;
     display: flex;
     width: 400%;
-
-    animation: cambio 10s infinite alternate;
-    animation-timing-function: ease-in;
+    animation: cambio 20s infinite alternate;
 }
-
+.slider li{
+    list-style: none;
+    width: 100%;
+    
+}
 .slider img{
     width: 100%;
-}
+    height: 395px;
 
-.sli{
-    width: 100%;
-    list-style: none;
 }
-
-@keyframes cambio{
+@keyframes cambio {
     0% {margin-left: 0;}
     20% {margin-left: 0;}
 
@@ -115,13 +115,13 @@ h3{
 }
 
 .modulo1{
-    margin: 20px 500px;
+    margin-top: 20%;
     width: 300px;
-    height: 100px;  
+    height: 100px; 
+    margin-left: 40%; 
 }
 
 .modulo2{
-    margin: -120px 797px;
     width: 300px;
     height: 100px;
 }
@@ -131,13 +131,13 @@ h3{
     width: 150px;
     height: 50px;
     font-size: 15px;
-    border: 2px solid black;
-    background: rgb(38, 5, 112);
-    color: white;
+    border: 2px solid green;
+    background:rgba(38, 5, 112, 1);
+    color: black;
 }
 
 .btn_modulo:hover{
-    color: black;
+    color: rgba(38, 5, 112, 1) ;
     background-color: white;
     box-shadow: 0 4px 16px rgba(38, 5, 112, 1);
     transition: all 0.2s ease;
@@ -171,7 +171,7 @@ h3{
 
 .menu li a:hover{
     color: black;
-    background: white;
+    background: blue;
     box-shadow: 0 4px 16px rgba(38, 5, 112, 1);
 	transition: all .3s;
 }
@@ -200,8 +200,15 @@ h3{
 	visibility: visible;
 	opacity: 1;
 }
+/*--------------------------------- redes sociales----------------------------------------- */
 
-.facebook{
+.redes{
+    margin-top: -60%;
+    font-family: 'Saira Condensed', sans-serif;
+    position: fixed;
+}
+
+.facebook, .twitter, .youtube, .instagram{
     width: 400px;
     height: 50px;
     background: rgb(38, 5, 112);
@@ -213,115 +220,57 @@ h3{
     display: flex;
     padding: 10px;
 }
-.facebook p{
-    margin-left: 25px;
-    font-size: 15px;
+.facebook p, .twitter p, .youtube p, .instagram p{
+    margin-left:23px;
+    font-size: 25px;
     color: white;
+    height: 40px;
+    margin-top:-1% ;
 }
-.instagram{
-    width: 400px;
-    height: 50px;
+
+.facebook:hover, .instagram:hover, .twitter:hover, .youtube:hover{
+    margin-left: 1200px;
+}
+
+.facebooki, .instagrami, .twitteri, .youtubei{
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: rgb(160, 160, 160);
+}
+
+/*--------------------------------- redes sociales----------------------------------------- */
+/*______________________________ pie de pagina________________________________________ */
+
+footer{
     background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    display: flex;
-    padding: 10px;
-    transition: 0.5s;
+    width: 100%;
     
-}
-.instagram p{
-    margin-left: 30px;
-    font-size: 15px;
-    color: white;
-}
-.twitter{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
+    height: 90.22px;
     display: flex;
-    padding: 10px;
-    transition: 0.5s;
-    
 }
-.twitter p{
-    margin-left: 25px;
-    font-size: 15px;
+.logoos{
+    width: 10%;
+    height: 90px;
+    margin-right: 20%;
+}
+
+.logooo{
+    width: 7%;
+    height: 90px;
+    margin-left: 20%;
+}
+
+.text
+{
+    text-align: center;
+    margin-right:10% ;
     color: white;
-}
-.youtube{
-    width: 400px;
-    height: 50px;
-    background: rgb(38, 5, 112);
-    margin-top: 5px ;
-    margin-left: 5px;
-    border-radius: 5px;
-    margin-left: 1285px;
-    display: flex;
-    padding: 10px;
-    transition: 0.5s;
-}
-.youtube p{
-    margin-left: 25px;
-    font-size: 15px;
-    color: white;
-}
-.facebook:hover{
-    margin-left: 1200px;
-
-}
-.instagram:hover{
-    margin-left: 1200px;
-
-}
-.twitter:hover{
-    margin-left: 1200px;
-
-}
-.youtube:hover{
-    margin-left: 1200px;
-
-}
-.facebooki{
     font-size: 20px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(238, 235, 235);;
+    width: 60%;
 }
-.instagrami{
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(231, 229, 229);;
-}
-.twitteri{
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(235, 232, 231);;
-}
-.youtubei{
-    font-size: 20px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: rgb(230, 230, 230);;
-}
-
-.footer{
-    border: 2px solid black;
-    height: 150px;
-    background: rgb(38, 5, 112);
-}
-
-.titulo-footer{
-    font-size: 10px;
-    margin: 10px;
-    color: white;
+.text p{
+    margin: 0px;
 }
 
 .img{
@@ -355,11 +304,11 @@ a:hover{
 }
 
 .info{
-    width: 1000px;
+    width:80%;
     height: 150px;
     border: 2px solid black;
     position: absolute;
-    margin: 70px 100px;
+    margin-left: 10%;
     background: rgb(38, 5, 112);
     border-radius: 30px;
 }
@@ -371,16 +320,16 @@ a:hover{
 
 .btn_editar{
     position: absolute;
-    margin: 175px 863px;
+    margin: 135px 863px;
     width: 190px;
     padding: 5px;
-    border: 2px solid rgb(17, 17, 17);
+    border: 2px solid green;
     border-radius: 40px;
-    color: white;
-    background: rgb(38, 5, 112);
+    color: black;
+    background: white;
 }
 
 .btn_editar:hover{
-    color: black;
-    background: white;
+    color: white;
+    background: black;
 }
