--- a/cliente/cliente.css
+++ b/cliente/cliente.css
@@ -118,7 +118,8 @@ h3{
     margin-top: 20%;
     width: 300px;
     height: 100px; 
-    margin-left: 40%; 
+    margin-left: 40%;
+    z-index: 11;
 }
 
 .modulo2{
